removed umlauts
